edited teh bullit point list and fixed the colour contrast

--- a/src/assets/css/custom/_background.scss
+++ b/src/assets/css/custom/_background.scss
@@ -1,15 +1,15 @@
 .bg-general-land{
-background: #814FA7;
+background: #F9DBBE;
 border-radius: 12px;
 }
 
 .bg-general-vol{
-background: #734B90;
+background: #F9DBBE;
 border-radius: 12px;
 }
 
 .bg-general-chap{
-background:#6E448E;
+background:#F9DBBE;
 border-radius: 12px;
 }
 
