--- a/src/assets/css/custom/_buttons.scss
+++ b/src/assets/css/custom/_buttons.scss
@@ -1,5 +1,5 @@
 .fg-general-land{
-background-color: #814FA7;
+background-color: #F9DBBE;
 font-size: 20px;
 color: black;
 border: solid rgb(0, 0, 0) 3px;
@@ -14,7 +14,7 @@ margin: 0;
 }
 
 .fg-general-vol{
-background-color: #734B90;
+background-color: #F9DBBE;
 font-size: 20px;
 color: black;
 border: solid rgb(0, 0, 0) 3px;
@@ -30,7 +30,7 @@ margin: 0;
 }
 
 .fg-general-chap{
-background-color: #6E448E;
+background-color: #F9DBBE;
 font-size: 20px;
 color: black;
 border: solid rgb(0, 0, 0) 3px;
