--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -11,9 +11,16 @@ p {
    text-align: left;
 }
 ol{
- padding-left:0; 
  text-align: left;
 }
+
+ul {
+   text-align: left;
+ }
+ 
+ li {
+   text-align: left;
+ }
 
 h1 {
    font-size: 2.5em;
